2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/issymmetric.m: Move to linear-algebra.
	* general/isdefinite.m: Ditto.
	* linear-algebra/issymmetric.m: Use 0 as default tolerance. Optimize
	this case. Check for symmetry, not hermitianness.
	* linear-algebra/ishermitian.m: New function.
	* linear-algebra/isdefinite.m: Use ishermitian instead of issymmetric.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/cellidx.m: Deprecate.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/issquare.m: Change to return consistent result for empty
	matrices.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/cell2mat.m: Check type of all elements. Slightly optimize.
	Add tests.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumarray.m: Use num2cell instead of mat2cell. Use repmat.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* script/miscellaneous/getfield: Deblank field names, gripe on invalid
	index.
	* script/miscellaneous/setfield: Rewrite using subsasgn.

2009-11-22  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/print.m: Properly set the default ghostscript_binary
	under Windows. Modify the search for the ghostscript binary
	so that it works for Win32, mingw, Cygwin, and Unix systems.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* scripts/strings/dec2base.m: Fix division.

2009-11-20  Lukas Reichlin <lukas.reichlin@swissonline.ch>

	* linear-algebra/krylov.m: Add missing swap routine.

2009-11-20  Jaroslav Hajek  <highegg@gmail.com>

	* general/__isequal__.m: Check for isnumeric|islogical.
	* testfun/assert.m: Ditto.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/perms.m: Avoid recursion. Simplify assignments. Allow empty
	vectors.

2009-11-19  Jaroslav Hajek  <highegg@gmail.com>

	* specfun/erfinv.m: Remove.
	* specfun/module.mk: Update.

2009-11-18  Ben Abbott <bpabbott@mac.com>

	* plot/orient.m: Flip papersize and paperposition when orientation